[gd_scene load_steps=2 format=3 uid="uid://dy1pmgmv47rjj"]

[ext_resource type="Script" path="res://Scripts/PlacementTest.gd" id="1"]

[node name="PlacementTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.04, 0.06, 0.11, 1)

[node name="Main" type="MarginContainer" parent="."]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
custom_minimum_size = Vector2(0, 0)

[node name="VBox" type="VBoxContainer" parent="Main"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(840, 0)

[node name="Heading" type="Label" parent="Main/VBox"]
layout_mode = 2
text = "SkillPath Placement"
theme_override_font_sizes/font_size = 32

[node name="Subheading" type="Label" parent="Main/VBox"]
layout_mode = 2
text = "35-question placement across A1–C2"
modulate = Color(0.7, 0.9, 1, 1)

[node name="ProgressRow" type="HBoxContainer" parent="Main/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)

[node name="QuestionCounter" type="Label" parent="Main/VBox/ProgressRow"]
layout_mode = 2
text = "Question 1 / 35"
custom_minimum_size = Vector2(150, 0)

[node name="ProgressBar" type="ProgressBar" parent="Main/VBox/ProgressRow"]
layout_mode = 2
size_flags_horizontal = 3
value = 1.0

[node name="QuestionPanel" type="PanelContainer" parent="Main/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Card" type="VBoxContainer" parent="Main/VBox/QuestionPanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 420)

[node name="SkillLabel" type="Label" parent="Main/VBox/QuestionPanel/Card"]
layout_mode = 2
text = "Level · Skill"
modulate = Color(0.8, 0.9, 1, 1)

theme_override_font_sizes/font_size = 20

[node name="Prompt" type="RichTextLabel" parent="Main/VBox/QuestionPanel/Card"]
layout_mode = 2
size_flags_vertical = 3
fit_content = true
text = "Question prompt"
scroll_active = false

[node name="Options" type="VBoxContainer" parent="Main/VBox/QuestionPanel/Card"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 200)

[node name="TextAnswer" type="LineEdit" parent="Main/VBox/QuestionPanel/Card"]
layout_mode = 2
placeholder_text = "Type your answer"
visible = false

[node name="NavButtons" type="HBoxContainer" parent="Main/VBox/QuestionPanel/Card"]
layout_mode = 2
custom_minimum_size = Vector2(0, 48)

[node name="PrevButton" type="Button" parent="Main/VBox/QuestionPanel/Card/NavButtons"]
layout_mode = 2
text = "Back"

[node name="NextButton" type="Button" parent="Main/VBox/QuestionPanel/Card/NavButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Next"

[node name="StatusLabel" type="Label" parent="Main/VBox"]
layout_mode = 2
modulate = Color(1, 0.6, 0.4, 1)
text = ""

[node name="SummaryPanel" type="PanelContainer" parent="Main/VBox"]
layout_mode = 2
visible = false

[node name="ResultVBox" type="VBoxContainer" parent="Main/VBox/SummaryPanel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ResultLabel" type="Label" parent="Main/VBox/SummaryPanel/ResultVBox"]
layout_mode = 2
text = "Score: 0 / 0"

[node name="LevelLabel" type="Label" parent="Main/VBox/SummaryPanel/ResultVBox"]
layout_mode = 2
text = "Assigned level: A1"

[node name="EnterButton" type="Button" parent="Main/VBox/SummaryPanel/ResultVBox"]
layout_mode = 2
text = "Enter Hub"
size_flags_horizontal = 3
*** End File